💄 UI: fix the problem that a label can't be aligned (#293)

--- a/src/index.less
+++ b/src/index.less
@@ -23,10 +23,16 @@
 
   .@{ant-prefix}-table-row .@{ant-prefix}-table-cell:first-child {
     padding-left: 24px;
+    a {
+      padding: 0;
+    }
   }
 
   .@{ant-prefix}-table-content tr:first-child > th:first-child {
     padding-left: 24px;
+    a {
+      padding: 0;
+    }
   }
 
   td.@{ant-prefix}-table-cell {
